samples/_failures_safe/1761548928_8f1295_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d59baa7.c: In function ‘main’:
./samples/SAFE/__tmp_6d59baa7.c:178:20: error: missing terminating " character
  178 |             printf("Error: State machine error occurred\n
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6d59baa7.c:178:13: error: expected expression at end of input
  178 |             printf("Error: State machine error occurred\n
      |             ^~~~~~
./samples/SAFE/__tmp_6d59baa7.c:178:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6d59baa7.c:178:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6d59baa7.c:178:13: error: expected declaration or statement at end of input
